# iQubeBeta-Program

./: .env  .gitignore  .gitmodules  CHANGELOG.md  Cargo.toml  Makefile  Makefile.bundle  dfx.json  package.json  test-live-sdk.js
.dfx/local/: canister_ids.json
.dfx/local/lsp/: umunu-kh777-77774-qaaca-cai.did
.dfx/network/local/: network-id  replica-effective-config.json
.github/workflows/: ci.yml  icp-ci.yml
apps/21sats-market/: README.md  next.config.js  package.json
apps/21sats-market/.next/: BUILD_ID  trace  (+6 more)
apps/ops-console/: .env.local  README.md  next.config.js  package.json
canisters/: README.md
canisters/btc_signer_psbt/: Cargo.toml  btc_signer_psbt.did
canisters/cross_chain_service/: Cargo.toml
canisters/evm_rpc/: Cargo.toml
canisters/proof_of_state/: Cargo.toml
canisters/proof_of_state/src/: lib.rs
canisters/solana_signer_ed25519/: Cargo.toml  solana_signer_ed25519.did
contracts/: README.md  foundry.toml
docs/: BUILD_MANUAL.md  DFX_INSTALLATION.md  ICP_BTC_TESTING_GUIDE.md  LESSONS_LEARNED.md  OPERATING_MANUAL.md  PROGRESS_REPORT.md  SESSION_PROGRESS_REPORT.md  TECHNICAL_ISSUES_RESOLVED.md  operators-manual.md
docs.bak.20250914_111218/: BUILD_MANUAL.md  DEVELOPMENT_WORKFLOW.md
docs.bak.20250914_111218/runbooks/: anchors.md
docs/architecture/: iQube_ICP_BTC_Architecture.md  iQube_ICP_BTC_Diagrams.md
docs/operating-manual/: docusaurus.config.ts  package-lock.json  package.json  sidebars.ts
docs/runbooks/: anchors.md  bridge_incidents.md
ops/env/: .env.example  .env.example.backup.20250914_125454
scripts/: install-dfx.sh
(+222 files in other folders)
