[workspace]
resolver = "2"
members = [
    "canisters/proof_of_state",
    "canisters/btc_signer_psbt", 
    "canisters/cross_chain_service",
    "canisters/evm_rpc",
    "canisters/solana_signer_ed25519"
]

[workspace.dependencies]
candid = "0.10"
ic-cdk = "0.13"
ic-cdk-timers = "0.7"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
