[package]
name = "proof_of_state"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
candid = { workspace = true }
ic-cdk = { workspace = true }
ic-cdk-timers = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sha2 = "0.10"

[dev-dependencies]
futures = "0.3"
